cmake_minimum_required(VERSION 3.8)
project(PenloopScan)
set(CMAKE_CXX_STANDARD 11)
set(SOURCE_FILES main.cpp SourceFile/mysql_class.cpp HeaderFile/mysql_class.h HeaderFile/controller_class.h SourceFile/controller_class.cpp HeaderFile/global.h HeaderFile/dns_class.h SourceFile/dns_class.cpp HeaderFile/sockscan_class.h SourceFile/sockscan_class.cpp HeaderFile/http_class.h SourceFile/http_class.cpp)
add_executable(PenloopScan ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(PenloopScan mysqlclient ldns curl pthread)
install (TARGETS PenloopScan DESTINATION bin)
install (FILES my.ini DESTINATION /etc/PenloopScan)
install (FILES dict.txt DESTINATION /etc/PenloopScan)